Domain services refactoring